Stop building up the opaque region if it gets too complicated.  Bug 253001, r+sr=roc